# Proiect_comun

./: CMakeLists.txt  main.cpp
controller/: CMakeLists.txt  ClientManagementController.cpp  ClientManagementController.h  OrderController.cpp  OrderController.h  ProductController.cpp  ProductController.h  UserManagementController.cpp  UserManagementController.h
domain/: CMakeLists.txt  Customer.cpp  Customer.h  Employee.cpp  Employee.h  Order.cpp  Order.h  Product.cpp  Product.h  User.cpp  User.h
domain/Validations/: CustomerValidator.cpp  CustomerValidator.h  EmployeeValidator.cpp  EmployeeValidator.h  OrderValidator.cpp  OrderValidator.h  ProductValidator.cpp  ProductValidator.h  UserValidator.cpp  UserValidator.h
repository/: CMakeLists.txt  DataSeeder.cpp  DataSeeder.h  InMemoryRepository.cpp  InMemoryRepository.h  UserRepository.cpp  UserRepository.h
repository/interfaces/: IRepository.h
services/: OrderService.cpp  OrderService.h  UserService.cpp  UserService.h
services/interfaces/: ICustomerService.h  IOrderService.h  IProductService.h
test/: CMakeLists.txt  CustomerTest.cpp  EmployeeTest.cpp  ProductTest.cpp  Test_A.cpp  Test_A.h  UserTest.cpp
ui/: CMakeLists.txt  ClientManagementUI.cpp  ClientManagementUI.h  OrderManagementUI.cpp  OrderManagementUI.h  ProductManagementUI.cpp  ProductManagementUI.h  UI.cpp  UI.h  UserManagementUI.cpp  UserManagementUI.h
